RESOLVED FIXED158737
REGRESSION(202002-202014): 845 32-bit JSC Stress Test failures
https://bugs.webkit.org/show_bug.cgi?id=158737
Summary REGRESSION(202002-202014): 845 32-bit JSC Stress Test failures
Ryan Haddad
Reported 2016-06-14 07:58:04 PDT
<https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20%28BuildAndTest%29/builds/2650/steps/webkit-32bit-jsc-test/logs/stdio> airjs-tests.yaml/stress-test.js.default: ASSERTION FAILED: m_useCount airjs-tests.yaml/stress-test.js.default: /Volumes/Data/slave/elcapitan-32bitJSC-debug/build/Source/JavaScriptCore/dfg/DFGGenerationInfo.h(178) : bool JSC::DFG::GenerationInfo::use(JSC::DFG::VariableEventStream &) airjs-tests.yaml/stress-test.js.default: 1 0xe15c4d WTFCrash airjs-tests.yaml/stress-test.js.default: 2 0x68b24d JSC::DFG::GenerationInfo::use(JSC::DFG::VariableEventStream&) airjs-tests.yaml/stress-test.js.default: 3 0x68b0dd JSC::DFG::SpeculativeJIT::use(JSC::DFG::Node*) airjs-tests.yaml/stress-test.js.default: 4 0x67321b JSC::DFG::JSValueOperand::use() airjs-tests.yaml/stress-test.js.default: 5 0x6b36dc JSC::DFG::SpeculativeJIT::emitCall(JSC::DFG::Node*) airjs-tests.yaml/stress-test.js.default: 6 0x6d369d JSC::DFG::SpeculativeJIT::compile(JSC::DFG::Node*) airjs-tests.yaml/stress-test.js.default: 7 0x63fc7e JSC::DFG::SpeculativeJIT::compileCurrentBlock() airjs-tests.yaml/stress-test.js.default: 8 0x640622 JSC::DFG::SpeculativeJIT::compile() airjs-tests.yaml/stress-test.js.default: 9 0x4eab5c JSC::DFG::JITCompiler::compileBody() airjs-tests.yaml/stress-test.js.default: 10 0x4ee787 JSC::DFG::JITCompiler::compileFunction() airjs-tests.yaml/stress-test.js.default: 11 0x5f2591 JSC::DFG::Plan::compileInThreadImpl(JSC::DFG::LongLivedState&) airjs-tests.yaml/stress-test.js.default: 12 0x5f10fc JSC::DFG::Plan::compileInThread(JSC::DFG::LongLivedState&, JSC::DFG::ThreadData*) airjs-tests.yaml/stress-test.js.default: 13 0x46b693 JSC::DFG::compileImpl(JSC::VM&, JSC::CodeBlock*, JSC::CodeBlock*, JSC::DFG::CompilationMode, unsigned int, JSC::Operands<JSC::JSValue, JSC::OperandValueTraits<JSC::JSValue> > const&, WTF::PassRefPtr<JSC::DeferredCompilationCallback>) airjs-tests.yaml/stress-test.js.default: 14 0x46b062 JSC::DFG::compile(JSC::VM&, JSC::CodeBlock*, JSC::CodeBlock*, JSC::DFG::CompilationMode, unsigned int, JSC::Operands<JSC::JSValue, JSC::OperandValueTraits<JSC::JSValue> > const&, WTF::PassRefPtr<JSC::DeferredCompilationCallback>) airjs-tests.yaml/stress-test.js.default: 15 0x90e941 operationOptimize airjs-tests.yaml/stress-test.js.default: 16 0x2a5f0a1 airjs-tests.yaml/stress-test.js.default: 17 0x2a8ea14 airjs-tests.yaml/stress-test.js.default: 18 0x2a6576f airjs-tests.yaml/stress-test.js.default: 19 0x2adbd95 airjs-tests.yaml/stress-test.js.default: 20 0xaf8209 llint_entry airjs-tests.yaml/stress-test.js.default: 21 0xaf84d3 llint_entry airjs-tests.yaml/stress-test.js.default: 22 0xaf8209 llint_entry airjs-tests.yaml/stress-test.js.default: 23 0xaf8209 llint_entry airjs-tests.yaml/stress-test.js.default: 24 0xaf2d1c vmEntryToJavaScript airjs-tests.yaml/stress-test.js.default: 25 0x8f3962 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) airjs-tests.yaml/stress-test.js.default: 26 0x898e06 JSC::Interpreter::execute(JSC::ProgramExecutable*, JSC::ExecState*, JSC::JSObject*) airjs-tests.yaml/stress-test.js.default: 27 0x28d048 JSC::evaluate(JSC::ExecState*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) airjs-tests.yaml/stress-test.js.default: 28 0x38681 runWithScripts(GlobalObject*, WTF::Vector<Script, 0ul, WTF::CrashOnOverflow, 16ul> const&, WTF::String const&, bool, bool) airjs-tests.yaml/stress-test.js.default: 29 0x379c6 runJSC(JSC::VM*, CommandLine) airjs-tests.yaml/stress-test.js.default: 30 0x369a9 jscmain(int, char**) airjs-tests.yaml/stress-test.js.default: 31 0x36816 main
Attachments
crash log (33.73 KB, text/plain)
2016-06-14 08:08 PDT, Ryan Haddad
no flags
Patch (1.60 KB, patch)
2016-06-14 11:25 PDT, Keith Miller
no flags
Ryan Haddad
Comment 1 2016-06-14 08:08:13 PDT
Created attachment 281258 [details] crash log Attached crash log from bot.
Filip Pizlo
Comment 2 2016-06-14 11:04:31 PDT
Keith Miller
Comment 3 2016-06-14 11:07:06 PDT
Looking into this now.
Keith Miller
Comment 4 2016-06-14 11:25:31 PDT
WebKit Commit Bot
Comment 5 2016-06-14 12:00:20 PDT
Comment on attachment 281267 [details] Patch Clearing flags on attachment: 281267 Committed r202058: <http://trac.webkit.org/changeset/202058>
WebKit Commit Bot
Comment 6 2016-06-14 12:00:25 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2016-06-14 13:09:03 PDT
Re-opened since this is blocked by bug 158748
Ryan Haddad
Comment 8 2016-06-14 13:09:22 PDT
(In reply to comment #7) > Re-opened since this is blocked by bug 158748 This was an error. Sorry for the noise.
Note You need to log in before you can comment on or make changes to this bug.