Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp
@@ -807,7 +807,7 @@ void SpeculativeJIT::emitCall(Node* node)
             use(node->child3());
 
         // Now set up the "this" argument.
-        JSValueOperand thisArgument(this, node->child3());
+        JSValueOperand thisArgument(this, node->child2());
         GPRReg thisArgumentTagGPR = thisArgument.tagGPR();
         GPRReg thisArgumentPayloadGPR = thisArgument.payloadGPR();
         thisArgument.use();
